@@ -1,3 +1,9 @@
+2002-07-25  Deepa Natarajan  <deepa.natarajan@wipro.com>
+
+	* logview.[ch], log_repaint.c: Maintain the correct status
+	of expanded rows when switching between logs.
+	Partly Fixes #87398.
+
 2002-07-24  Deepa Natarajan  <deepa.natarajan@wipro.com>
 
 	* actions.c: Pass the command to execute twice for execlp (),
